--- a/src/app/modules/registeration/components/login/login.component.html
+++ b/src/app/modules/registeration/components/login/login.component.html
@@ -6,17 +6,17 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-6">
-      <form>
+      <form [formGroup]="clientDetail">
         <!-- Email input -->
         <div class="form-outline mb-4">
           <label class="form-label" for="email">Email address</label>
-          <input type="email" id="email" class="form-control" placeholder="Email" />
+          <input type="email" id="email" class="form-control" placeholder="Email" formControlName="email" id="email" />
         </div>
       
         <!-- Password input -->
         <div class="form-outline mb-4">
           <label class="form-label" for="password">Password</label>
-          <input type="password" id="password" class="form-control" placeholder="Password" />
+          <input type="password" id="password" class="form-control" placeholder="Password" formControlName="password" id="password" />
         </div>
       
         <!-- Submit button -->
@@ -30,3 +30,4 @@
     </div>
   </div>
 </div>
+<button (click)="onSignOut()"></button>
